# jarvis-ai

./: .dockerignore  .env  .env.example  .gitignore  200_FIRE_FEATURES.md  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  IDEAS_FOR_JARVIS_OMEGA.md  JARVIS_PC_CONTROL_GUIDE.md  OMEGA_GALAXY_ROADMAP.md  README.md  RUN_ON_LOCALHOST.md  SECURITY.md  Start-Jarvis-Desktop.bat  app.py  backend_log.txt  backend_log2.txt  backend_log3.txt  backend_out_new.txt  backend_stdout.txt  backend_stdout2.txt  backend_uvicorn.txt  comprehensive_test.py  config.py  conftest.py  docker-compose.yml  pair_device.py  pyproject.toml  refresh_tokens.py  requirements.txt  start_jarvis_all.bat  test_complex.py  test_desktop.py  test_result.txt
android/: build.gradle.kts  settings.gradle.kts
backend/: __init__.py  activity_logger.py  approval_gateway.py  backup_manager.py  business_db.py  config.py  device_registry.py  disaster_recovery.py  event_bus.py  health_monitor.py  main.py  memory_engine.py  memory_engine_v2.py  memory_indexer.py  notification_engine.py  omega_control.py  proactive_watcher.py  project_graph.py  project_scanner.py  resource_manager.py  scheduler.py  self_heal.py  task_manager.py  ui_manager.py  websocket_manager.py
brain/: __init__.py  code_agent.py  llm.py  memory.py  model3d_agent.py  reasoning.py  session.py  time_engine.py  tripo_agent.py  vision.py  web_search.py
config/: client_config.json  daemon.json
database/: .gitkeep
docs/: JARVIS_OMEGA_ESSAY.md
frontend/: .env.local.example  index.html  next.config.mjs  package-lock.json  package.json  (+3 more)
(+624 files in other folders)
