[project]
name = "jarvis-omega"
version = "1.0.0"
description = "JARVIS OMEGA Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "python-dotenv==1.1.0",
    "pydantic==2.11.1",
    "pydantic-settings==2.9.1",
    "python-multipart==0.0.20",
    "websockets==14.2",
    "httpx==0.28.1",
    "aiohttp==3.11.16",
    "aiosqlite==0.21.0",
    "chromadb==0.6.3",
    "PyJWT==2.10.1",
    "bcrypt==4.3.0",
    "cryptography==44.0.2",
    "apscheduler==3.11.0",
    "pywebpush==2.0.1",
    "Pillow>=10.0.0,<11.0.0",
    "python-docx==1.1.2",
    "openpyxl==3.1.5",
    "pypdf==5.4.0",
    "chardet==5.2.0",
    "watchdog==6.0.0",
    "structlog==25.1.0",
    "uuid6==2024.7.10",
    "orjson==3.10.15",
    "pytest==8.1.1",
    "pytest-asyncio==0.23.6",
    "edge-tts==7.0.2",
    "trafilatura==2.1.0",
    "feedparser==6.0.12",
    "icalendar==7.2.2",
    "qrcode==8.2",
    "ccxt==4.4.18",
    "pandas>=2.2.3",
    "pandas-ta==0.4.71b0",
    "beautifulsoup4==4.12.3",
    "google-api-python-client==2.158.0",
    "google-auth-oauthlib==1.2.1",
    "google-auth-httplib2==0.2.0"
]

[tool.vercel]
entrypoint = "backend.main:app"
